﻿Release history for Gentoo-PerlMod-Version

{{$NEXT}}

0.8.0 2015-07-16T23:24:29Z 301fe54
 [00 Major / Features]
 - gentoo-perlmod-version.pl is now fatpacked.
 - This means the code should run better in mixed environments as well as between perl upgrades

 [Dependencies::Stats]
 - Dependencies changed since 0.7.1, see misc/*.deps* for details
 - develop: +2 -1 (suggests: ↑1)

0.7.1 2015-06-23T03:30:53Z 8b35638
 [00 Minor]
 - Avoid using an XS dep to simply iterate an array pairwise.
 - This effectively halves our total runtime dependencies.

 [Dependencies::Stats]
 - Dependencies changed since 0.7.0, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +10 ↑3 -3 (recommends: +1, suggests: ↑2)
 - runtime: -1
 - test: +1 (recommends: ↑1 ↓1)

0.7.0 2014-09-27T07:40:21Z
 [00 Important - Installing Toolkit Change]
 - This may affect hand operated downstreams
 - Code is migrated from using Module::Build to using ExtUtils::MakeMaker as an install tool.
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [01 Migrated to Sub::Exporter::Progressive]
 - No fancy stuff is really required internally, so a lighter weight Sub::Exporter::Progressive is now in use.

 [Dependencies::Stats]
 - Dependencies changed since 0.6.0, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +50 -1 (recommends: -1, suggests: +1 ↑1)
 - runtime: +2 ↓1 -1
 - test: +2 ↓1 -2 (recommends: +3)

 [Internals]
 - Fatal Exceptions don't lose their context as soon as they're thrown.
 - However, backtraces are subsequently slightly impeded.
 - Use Devel::Cover for full backtraces.

 [Metadata]
 - recognize 1x contributor
 - migrate to kentnl org

0.6.0 2012-10-27T12:27:17Z
 [00 IMPORTANT CHANGES]
 - $perlver being undef now is an error.
 - All error code is now refactored into the ::Error class, which ultimately grants more flexibility and better code
   organisation.