@@ -74,6 +74,8 @@ copy = Makefile.PL
 trailing_whitespace = 1
 
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
+:version = 0.003902
+test_template = 02-raw-require.t.tpl
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
 
@@ -81,7 +83,7 @@ trailing_whitespace = 1
 
 [RewriteVersion::Sanitized / @Author::KENTNL/RewriteVersion::Sanitized]
 mantissa = 6
-normal_form = normal_3
+normal_form = normal
 
 [PodWeaver / @Author::KENTNL/PodWeaver]
 replacer = replace_with_blank
@@ -93,7 +95,7 @@ finder = :InstallModules
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.025001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025021
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -232,7 +234,7 @@ Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
-Dist::Zilla::Plugin::Test::Compile::PerFile = 0
+Dist::Zilla::Plugin::Test::Compile::PerFile = 0.003902
 Dist::Zilla::Plugin::Test::EOL = 0
 Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::Test::Perl::Critic = 0
